--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "yarn build:tokens && yarn build:elvis:prod && yarn build:components:prod && yarn build:web:prod",
     "build:elvis": "nx build @elvia/elvis",
-    "build:elvis:prod": "nx build:production @elvia/elvis",
+    "build:elvis:prod": "nx build:production @elvia/elvis --skip-nx-cache",
     "build:components": "nx build @elvia/elvis-components",
     "build:components:prod": "nx build:production @elvia/elvis-components --skip-nx-cache",
     "build:web": "nx build elvia-designsystem",
@@ -40,8 +40,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "./scripts/pre-push.sh"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
