--- a/packages/components/components/elvis-pagination/package.json
+++ b/packages/components/components/elvis-pagination/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-pagination",
-  "version": "3.2.2",
+  "version": "3.2.3",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -16,6 +16,7 @@
   "dependencies": {
     "@elvia/elvis-colors": "^1.2.1",
     "@elvia/elvis-component-wrapper": "^3.0.1",
+    "@elvia/elvis-dropdown": "^5.0.0",
     "@elvia/elvis-icon": "^1.3.1",
     "@elvia/elvis-toolbox": "^5.0.0",
     "@elvia/elvis-typography": "^2.1.0",
