--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -37,6 +37,7 @@
     "@testing-library/dom": "8.19.0",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "12.1.5",
+    "@testing-library/react-hooks": "8.0.1",
     "@testing-library/user-event": "14.4.3",
     "@types/gulp": "^4.0.9",
     "@types/gulp-babel": "^6.1.30",
