--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -92,7 +92,7 @@
     "object-path": ">=0.11.5",
     "stylelint": "^10.0.1 || ^11.0.0 || ^12.0.0 || ^13.0.0",
     "ts-node": "8.10.2",
-    "typescript": "^4.8.2",
+    "typescript": "~4.8.2",
     "webpack": "^5.12.0",
     "webpack-subresource-integrity": ">=1.5.1"
   }
