--- a/package.json
+++ b/package.json
@@ -75,9 +75,9 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.7",
     "nx": "15.0.4",
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
-    "react-is": ">= 16.8.0",
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "rxjs": "^6.5.3",
     "safe-json-stringify": "^1.2.0",
     "typescript": "~4.7.2",
