--- a/packages/components/components/elvis-segmented-control/package.json
+++ b/packages/components/components/elvis-segmented-control/package.json
@@ -26,8 +26,8 @@
     "@types/lodash.uniqueid": "^4.0.7"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0",
-    "react-is": ">=16.8.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0"
   }
 }
