--- a/packages/components/components/elvis-toolbox/package.json
+++ b/packages/components/components/elvis-toolbox/package.json
@@ -18,8 +18,8 @@
     "tslib": "^2.4.0"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
-    "react-is": ">= 16.8.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0"
   }
 }
