--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -70,9 +70,9 @@
     "jsdom": "^16.6.0",
     "merge-stream": "^2.0.0",
     "mocha": "^8.4.0",
-    "react": "^17.0.0-0",
-    "react-dom": "^17.0.0-0",
-    "react-is": ">= 16.8.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
     "resize-observer-polyfill": "^1.5.1",
     "style-loader": "^1.2.1",
     "styled-components": "^5.3.3",
