--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -6,11 +6,11 @@
   "license": "ISC",
   "author": "",
   "scripts": {
-    "build": "gulp --gulpfile build/gulpfile.js cleanup && gulp --gulpfile build/gulpfile.js && webpack --mode=production --stats=minimal  --config ./webpack.config.js",
-    "build:production": "gulp --gulpfile build/gulpfile.js cleanup && gulp --gulpfile build/gulpfile.js production && webpack --mode=production --stats=minimal  --config ./webpack.config.js",
-    "start": "concurrently \"webpack --watch --mode=production --stats=minimal \" \"gulp --gulpfile build/gulpfile.js watch\"",
-    "start:nocdn": "gulp --gulpfile build/gulpfile.js watch",
-    "clean": "gulp --gulpfile build/gulpfile.js cleanup",
+    "build": "gulp --gulpfile build/gulpfile.ts cleanup && gulp --gulpfile build/gulpfile.ts && webpack --mode=production --stats=minimal  --config ./webpack.config.js",
+    "build:production": "gulp --gulpfile build/gulpfile.ts cleanup && gulp --gulpfile build/gulpfile.ts production && webpack --mode=production --stats=minimal  --config ./webpack.config.js",
+    "start": "concurrently \"webpack --watch --mode=production --stats=minimal \" \"gulp --gulpfile build/gulpfile.ts watch\"",
+    "start:nocdn": "gulp --gulpfile build/gulpfile.ts watch",
+    "clean": "gulp --gulpfile build/gulpfile.ts cleanup",
     "test": "jest --config jest.config.js --colors",
     "test:start": "jest --config jest.config.js --watch --colors",
     "test:coverage": "jest --coverage --colors"
@@ -77,11 +77,12 @@
     "style-loader": "^1.2.1",
     "styled-components": "^5.3.3",
     "ts-loader": "^8.0.3",
+    "ts-node": "^10.9.1",
     "typescript-plugin-styled-components": "^2.0.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.6.0"
   },
   "peerDependencies": {
-    "typescript": "^4.8.2"
+    "typescript": "~4.8.2"
   }
 }
