--- a/packages/components/components/elvis-chip/package.json
+++ b/packages/components/components/elvis-chip/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-chip",
-  "version": "2.2.5",
+  "version": "2.2.6",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -15,7 +15,7 @@
   ],
   "dependencies": {
     "@elvia/elvis-colors": "^1.4.2",
-    "@elvia/elvis-component-wrapper": "^3.0.0",
+    "@elvia/elvis-component-wrapper": "^3.0.3",
     "@elvia/elvis-icon": "^1.3.1",
     "@elvia/elvis-toolbox": "^5.0.0",
     "@react-aria/interactions": "^3.8.4",
@@ -23,8 +23,8 @@
     "styled-components": "^5.3.3"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
-    "react-is": ">= 16.8.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0"
   }
 }
