--- a/packages/components/components/elvis-header/package.json
+++ b/packages/components/components/elvis-header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-header",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -15,15 +15,15 @@
   ],
   "dependencies": {
     "@elvia/elvis-colors": "^1.4.2",
-    "@elvia/elvis-component-wrapper": "^3.0.1",
+    "@elvia/elvis-component-wrapper": "^3.0.3",
     "@elvia/elvis-icon": "^1.3.2",
     "@elvia/elvis-toolbox": "^5.0.0",
     "@elvia/elvis-typography": "^2.3.1",
     "styled-components": "^5.3.3"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
-    "react-is": ">= 16.8.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0"
   }
 }
