--- a/packages/components/components/elvis-icon/package.json
+++ b/packages/components/components/elvis-icon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-icon",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -15,11 +15,11 @@
   ],
   "dependencies": {
     "@elvia/elvis-assets-icons": "^2.6.0",
-    "@elvia/elvis-component-wrapper": "^3.0.0"
+    "@elvia/elvis-component-wrapper": "^3.0.3"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
-    "react-is": ">= 16.8.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0"
   }
 }
