--- a/packages/components/components/elvis-progress-linear/package.json
+++ b/packages/components/components/elvis-progress-linear/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-progress-linear",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -15,12 +15,12 @@
   ],
   "dependencies": {
     "@elvia/elvis-colors": "^1.4.2",
-    "@elvia/elvis-component-wrapper": "^3.0.0",
+    "@elvia/elvis-component-wrapper": "^3.0.3",
     "styled-components": "^5.3.3"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
-    "react-is": ">= 16.8.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0"
   }
 }
