--- a/packages/components/components/elvis-segmented-control/package.json
+++ b/packages/components/components/elvis-segmented-control/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-segmented-control",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -15,7 +15,7 @@
   ],
   "dependencies": {
     "@elvia/elvis-colors": "^1.4.2",
-    "@elvia/elvis-component-wrapper": "^3.0.0",
+    "@elvia/elvis-component-wrapper": "^3.0.3",
     "@elvia/elvis-icon": "^1.3.1",
     "@elvia/elvis-toolbox": "^5.5.0",
     "@elvia/elvis-typography": "^2.3.1",
@@ -26,8 +26,8 @@
     "@types/lodash.uniqueid": "^4.0.7"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0",
-    "react-is": ">=16.8.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0"
   }
 }
