--- a/packages/components/components/elvis-spotlight/package.json
+++ b/packages/components/components/elvis-spotlight/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-spotlight",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "description": "",
   "main": "web_component.js",
   "author": "",
@@ -14,12 +14,12 @@
     "dist/**/*"
   ],
   "dependencies": {
-    "@elvia/elvis-component-wrapper": "^3.0.0",
+    "@elvia/elvis-component-wrapper": "^3.0.3",
     "styled-components": "^5.3.3"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
-    "react-is": ">= 16.8.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0"
   }
 }
