--- a/packages/components/components/elvis-tabs/package.json
+++ b/packages/components/components/elvis-tabs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-tabs",
-  "version": "1.5.8",
+  "version": "1.5.9",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -16,7 +16,7 @@
   ],
   "dependencies": {
     "@elvia/elvis-colors": "^1.4.2",
-    "@elvia/elvis-component-wrapper": "^3.0.1",
+    "@elvia/elvis-component-wrapper": "^3.0.3",
     "@elvia/elvis-icon": "^1.3.1",
     "@elvia/elvis-toolbox": "^5.0.0",
     "classnames": "^2.3.1",
@@ -27,8 +27,8 @@
     "@types/lodash.throttle": "^4.1.7"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
-    "react-is": ">= 16.8.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0"
   }
 }
