--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -36,8 +36,7 @@
     "@elvia/elvis-component-wrapper": "*",
     "@testing-library/dom": "8.19.0",
     "@testing-library/jest-dom": "^5.15.1",
-    "@testing-library/react": "12.1.5",
-    "@testing-library/react-hooks": "8.0.1",
+    "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
     "@types/gulp": "^4.0.9",
     "@types/gulp-babel": "^6.1.30",
@@ -70,9 +69,9 @@
     "jsdom": "^16.6.0",
     "merge-stream": "^2.0.0",
     "mocha": "^8.4.0",
-    "react": "^17.0.0-0",
-    "react-dom": "^17.0.0-0",
-    "react-is": ">= 16.8.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
     "resize-observer-polyfill": "^1.5.1",
     "style-loader": "^1.2.1",
     "styled-components": "^5.3.3",
