--- a/packages/components/components/elvis-toolbox/package.json
+++ b/packages/components/components/elvis-toolbox/package.json
@@ -12,7 +12,7 @@
   ],
   "dependencies": {
     "@elvia/elvis-colors": "^1.4.2",
-    "@elvia/elvis-component-wrapper": "*",
+    "@elvia/elvis-component-wrapper": "^3.0.3",
     "@elvia/elvis-typography": "^2.3.1",
     "styled-components": "^5.3.6",
     "tslib": "^2.4.1"
