--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "gulp --gulpfile build/gulpfile.ts cleanup && gulp --gulpfile build/gulpfile.ts",
     "build:production": "gulp --gulpfile build/gulpfile.ts cleanup && gulp --gulpfile build/gulpfile.ts production",
-    "start": "concurrently \"webpack --watch --mode=production --stats=minimal \" \"gulp --gulpfile build/gulpfile.ts watch\"",
+    "start": "gulp --gulpfile build/gulpfile.ts watch",
     "clean": "gulp --gulpfile build/gulpfile.ts cleanup",
     "test": "jest --config jest.config.js --colors",
     "test:start": "jest --config jest.config.js --watch --colors",
@@ -76,9 +76,7 @@
     "styled-components": "^5.3.3",
     "ts-loader": "^8.0.3",
     "ts-node": "^10.9.1",
-    "typescript-plugin-styled-components": "^2.0.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^4.6.0"
+    "typescript-plugin-styled-components": "^2.0.0"
   },
   "peerDependencies": {
     "typescript": "~4.8.2"
