upgrade yarn to 3.3.0

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,7 @@
 nodeLinker: node-modules
 
+npmAuthToken: "${NODE_AUTH_TOKEN-''}"
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: '@yarnpkg/plugin-workspace-tools'
@@ -10,5 +12,4 @@ plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
     spec: '@yarnpkg/plugin-interactive-tools'
 
-yarnPath: .yarn/releases/yarn-3.2.4.cjs
-npmAuthToken: ${NODE_AUTH_TOKEN-''}
+yarnPath: .yarn/releases/yarn-3.3.0.cjs
