--- a/packages/components/components/elvis-context-menu/package.json
+++ b/packages/components/components/elvis-context-menu/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "@elvia/elvis-popover",
-  "version": "7.0.0",
-  "description": "",
+  "name": "@elvia/elvis-context-menu",
+  "version": "1.0.0",
   "license": "MIT",
-  "author": "",
   "main": "web_component.js",
   "files": [
     "web_component.js",
@@ -18,6 +16,7 @@
     "@elvia/elvis-component-wrapper": "^3.1.0",
     "@elvia/elvis-icon": "^1.3.5",
     "@elvia/elvis-toolbox": "^6.0.1",
+    "@elvia/elvis-typography": "^2.3.1",
     "styled-components": "^5.3.3"
   },
   "peerDependencies": {
