add types field to package.json

--- a/packages/elvis-typography/package.json
+++ b/packages/elvis-typography/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "author": "",
   "main": "dist/elviaTypography.js",
+  "types": "dist/elviaTypography.d.ts",
   "style": "dist/elviaTypography.scss",
   "scripts": {
     "build": "gulp"
