Lego 2096: Typography - migrer til Typescript (#1154)
* rewrite elviaTypography.js to Typescript

* rewrite gulpfile.js to Typescript

* add types field to package.json

--- a/packages/elvis-typography/package.json
+++ b/packages/elvis-typography/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "author": "",
   "main": "dist/elviaTypography.js",
+  "types": "dist/elviaTypography.d.ts",
   "style": "dist/elviaTypography.scss",
   "scripts": {
     "build": "gulp"
@@ -15,10 +16,11 @@
     "dist/**/*"
   ],
   "devDependencies": {
+    "@types/gulp": "^4.0.10",
+    "@types/gulp-typescript": "^2.13.0",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
-    "gulp-header": "^2.0.9",
-    "gulp-prettier": "^4.0.0",
-    "gulp-tap": "^2.0.0"
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "ts-node": "^10.9.1"
   }
 }
