--- a/packages/elvis-colors/package.json
+++ b/packages/elvis-colors/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@elvia/elvis-colors",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "description": "Elvia colors",
   "license": "MIT",
   "author": "",
   "main": "dist/elviaColors.js",
+  "types": "dist/elviaColors.d.ts",
   "style": "dist/elviaColors.scss",
   "scripts": {
     "build": "gulp"
@@ -14,15 +15,12 @@
     "README.md",
     "dist/**/*"
   ],
-  "dependencies": {
-    "lodash.kebabcase": "^4.1.1"
-  },
   "devDependencies": {
-    "@types/lodash.kebabcase": "^4.1.7",
+    "@types/gulp": "^4.0.10",
+    "@types/gulp-typescript": "^2.13.0",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
-    "gulp-header": "^2.0.9",
-    "gulp-prettier": "^4.0.0",
-    "gulp-tap": "^2.0.0"
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "ts-node": "^10.9.1"
   }
 }
