--- a/packages/components/components/elvis-card/package.json
+++ b/packages/components/components/elvis-card/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-card",
-  "version": "3.0.3",
+  "version": "3.0.4",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -14,10 +14,10 @@
     "dist/**/*"
   ],
   "dependencies": {
+    "@elvia/elvis-assets-icons": "^2.6.1",
     "@elvia/elvis-colors": "^1.4.2",
     "@elvia/elvis-component-wrapper": "^4.0.0",
-    "@elvia/elvis-icon": "^1.3.7",
-    "@elvia/elvis-toolbox": "^7.0.0",
+    "@elvia/elvis-toolbox": "^7.4.0",
     "@elvia/elvis-tooltip": "^1.1.6",
     "@elvia/elvis-typography": "^2.3.1",
     "styled-components": "^5.3.3"
