--- a/packages/components/components/elvis-header/package.json
+++ b/packages/components/components/elvis-header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-header",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -14,10 +14,10 @@
     "dist/**/*"
   ],
   "dependencies": {
+    "@elvia/elvis-assets-icons": "^2.6.1",
     "@elvia/elvis-colors": "^1.4.2",
     "@elvia/elvis-component-wrapper": "^4.0.0",
-    "@elvia/elvis-icon": "^1.3.7",
-    "@elvia/elvis-toolbox": "^7.0.0",
+    "@elvia/elvis-toolbox": "^7.4.0",
     "@elvia/elvis-typography": "^2.3.1",
     "styled-components": "^5.3.3"
   },
