--- a/packages/components/components/elvis-pagination/package.json
+++ b/packages/components/components/elvis-pagination/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-pagination",
-  "version": "3.3.0",
+  "version": "3.3.1",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -14,11 +14,11 @@
     "dist/**/*"
   ],
   "dependencies": {
+    "@elvia/elvis-assets-icons": "^2.6.1",
     "@elvia/elvis-colors": "^1.4.2",
     "@elvia/elvis-component-wrapper": "^4.0.0",
     "@elvia/elvis-dropdown": "^5.1.3",
-    "@elvia/elvis-icon": "^1.3.7",
-    "@elvia/elvis-toolbox": "^7.1.0",
+    "@elvia/elvis-toolbox": "^7.4.0",
     "@elvia/elvis-typography": "^2.3.1",
     "styled-components": "^5.3.3"
   },
