--- a/packages/components/components/elvis-tabs/package.json
+++ b/packages/components/components/elvis-tabs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-tabs",
-  "version": "1.5.11",
+  "version": "1.5.12",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -15,10 +15,10 @@
     "dist/**/*"
   ],
   "dependencies": {
+    "@elvia/elvis-assets-icons": "^2.6.1",
     "@elvia/elvis-colors": "^1.4.2",
     "@elvia/elvis-component-wrapper": "^4.0.0",
-    "@elvia/elvis-icon": "^1.3.7",
-    "@elvia/elvis-toolbox": "^7.0.0",
+    "@elvia/elvis-toolbox": "^7.4.0",
     "classnames": "^2.3.1",
     "lodash.throttle": "^4.1.1",
     "styled-components": "^5.3.3"
