--- a/packages/components/components/elvis-outline/package.json
+++ b/packages/components/components/elvis-outline/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@elvia/elvis-radio-filter",
-  "version": "1.5.5",
+  "name": "@elvia/elvis-outline",
+  "version": "1.0.0",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -16,8 +16,8 @@
   "dependencies": {
     "@elvia/elvis-colors": "^1.4.3",
     "@elvia/elvis-component-wrapper": "^4.0.0",
-    "@elvia/elvis-toolbox": "^7.4.0",
-    "styled-components": "^5.3.3"
+    "@elvia/elvis-toolbox": "^7.4.1",
+    "styled-components": "^5.3.6"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
