--- a/packages/components/components/elvis-datepicker-range/package.json
+++ b/packages/components/components/elvis-datepicker-range/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-datepicker-range",
-  "version": "2.0.11",
+  "version": "2.1.0",
   "main": "web_component.js",
   "license": "MIT",
   "files": [
@@ -14,6 +14,7 @@
   "dependencies": {
     "@elvia/elvis-component-wrapper": "^4.0.0",
     "@elvia/elvis-datepicker": "^6.0.15",
+    "@elvia/elvis-timepicker": "^2.2.0",
     "@elvia/elvis-toolbox": "^7.4.0",
     "styled-components": "^5.3.3"
   },
