feat: add pa11yci

--- a/package.json
+++ b/package.json
@@ -11,32 +11,33 @@
   },
   "scripts": {
     "build": "yarn build:tokens && yarn build:elvis:prod && yarn build:components:prod && yarn build:web:prod",
-    "build:elvis": "nx build @elvia/elvis",
-    "build:elvis:prod": "nx build:production @elvia/elvis --skip-nx-cache",
     "build:components": "nx build @elvia/elvis-components",
     "build:components:prod": "nx build:production @elvia/elvis-components --skip-nx-cache",
+    "build:elvis": "nx build @elvia/elvis",
+    "build:elvis:prod": "nx build:production @elvia/elvis --skip-nx-cache",
+    "build:tokens": "nx run-many --target=build --projects=@elvia/elvis-colors,@elvia/elvis-typography,@elvia/elvis-assets-icons --skip-nx-cache",
     "build:web": "nx build elvia-designsystem",
     "build:web:prod": "yarn contentful:production && nx run-many --target=build:production --projects=elvia-designsystem,react-test --parallel=1 --skip-nx-cache",
-    "build:tokens": "nx run-many --target=build --projects=@elvia/elvis-colors,@elvia/elvis-typography,@elvia/elvis-assets-icons --skip-nx-cache",
-    "start:elvis": "nx start @elvia/elvis",
-    "start:components": "nx start @elvia/elvis-components",
-    "start:web": "yarn contentful && nx start elvia-designsystem",
-    "start:react": "nx start react-test",
-    "start:vue": "nx start vue-preview",
-    "start:icons": "nx start @elvia/elvis-assets-icons",
     "contentful": "nx contentful elvia-designsystem",
     "contentful:production": "nx contentful:production elvia-designsystem --skip-nx-cache",
-    "prettier:elvis": "prettier --write \"packages/elvis/**/*.js\"",
-    "prettier:components": "prettier --write \"packages/components/**/*.{js,ts,tsx}\"",
-    "prettier:web": "prettier --write \"packages/web/src/**/*.ts\"",
     "lint": "./node_modules/.bin/eslint --fix \"./**/*.{js,ts,tsx}\"",
     "lint:all": "yarn prettier:elvis && yarn prettier:web && yarn prettier:components && yarn eslint",
-    "test": "nx test @elvia/elvis-components",
-    "test:start": "nx test:start @elvia/elvis-components",
-    "test:staged": "cd packages/components; jest --bail --findRelatedTests",
-    "publish": "yarn workspaces foreach -ipv --no-private npm publish --access public",
+    "nx:clear": "yarn nx clear-cache",
     "nx:graph": "yarn nx graph",
-    "nx:clear": "yarn nx clear-cache"
+    "prettier:components": "prettier --write \"packages/components/**/*.{js,ts,tsx}\"",
+    "prettier:elvis": "prettier --write \"packages/elvis/**/*.js\"",
+    "prettier:web": "prettier --write \"packages/web/src/**/*.ts\"",
+    "publish": "yarn workspaces foreach -ipv --no-private npm publish --access public",
+    "start:components": "nx start @elvia/elvis-components",
+    "start:elvis": "nx start @elvia/elvis",
+    "start:icons": "nx start @elvia/elvis-assets-icons",
+    "start:react": "nx start react-test",
+    "start:vue": "nx start vue-preview",
+    "start:web": "yarn contentful && nx start elvia-designsystem",
+    "test": "nx test @elvia/elvis-components",
+    "test:accessibility": "pa11y-ci --config .pa11yci.json",
+    "test:staged": "cd packages/components; jest --bail --findRelatedTests",
+    "test:start": "nx test:start @elvia/elvis-components"
   },
   "husky": {
     "hooks": {
@@ -75,6 +76,7 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.7",
     "nx": "15.0.4",
+    "pa11y-ci": "^3.0.1",
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0",
