--- a/packages/components/components/elvis-divider/package.json
+++ b/packages/components/components/elvis-divider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-divider",
-  "version": "1.4.3",
+  "version": "1.4.4",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -14,8 +14,9 @@
     "dist/**/*"
   ],
   "dependencies": {
-    "@elvia/elvis-colors": "^1.4.2",
+    "@elvia/elvis-colors": "^1.4.3",
     "@elvia/elvis-component-wrapper": "^4.0.0",
+    "@elvia/elvis-toolbox": "^7.4.3",
     "@elvia/elvis-typography": "^2.3.1",
     "styled-components": "^5.3.3"
   },
