--- a/packages/components/components/elvis-segmented-control/package.json
+++ b/packages/components/components/elvis-segmented-control/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-segmented-control",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -14,10 +14,11 @@
     "dist/**/*"
   ],
   "dependencies": {
-    "@elvia/elvis-colors": "^1.4.2",
+    "@elvia/elvis-assets-icons": "^2.6.1",
+    "@elvia/elvis-colors": "^1.4.3",
     "@elvia/elvis-component-wrapper": "^4.0.0",
     "@elvia/elvis-icon": "^1.3.7",
-    "@elvia/elvis-toolbox": "^7.0.0",
+    "@elvia/elvis-toolbox": "^7.4.3",
     "@elvia/elvis-typography": "^2.3.1",
     "lodash.uniqueid": "^4.0.1",
     "styled-components": "^5.3.3"
