--- a/packages/components/components/elvis-slider/package.json
+++ b/packages/components/components/elvis-slider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-slider",
-  "version": "2.1.7",
+  "version": "2.1.8",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -15,9 +15,10 @@
   ],
   "dependencies": {
     "@elvia/elvis-assets-icons": "^2.6.1",
-    "@elvia/elvis-colors": "^1.4.2",
+    "@elvia/elvis-colors": "^1.4.3",
     "@elvia/elvis-component-wrapper": "^4.0.0",
-    "@elvia/elvis-toolbox": "^7.4.0",
+    "@elvia/elvis-toolbox": "^7.4.3",
+    "@elvia/elvis-typography": "^2.3.1",
     "styled-components": "^5.3.3"
   },
   "peerDependencies": {
