--- a/packages/components/components/elvis-spotlight/package.json
+++ b/packages/components/components/elvis-spotlight/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-spotlight",
-  "version": "1.4.4",
+  "version": "1.4.5",
   "description": "",
   "main": "web_component.js",
   "author": "",
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "@elvia/elvis-component-wrapper": "^4.0.0",
+    "@elvia/elvis-toolbox": "^7.4.3",
     "styled-components": "^5.3.3"
   },
   "peerDependencies": {
