--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -45,6 +45,7 @@
     "@types/gulp-sourcemaps": "^0.0.35",
     "@types/gulp-tap": "^1.0.1",
     "@types/jest": "^29.2.3",
+    "@types/jest-axe": "^3.5.5",
     "@types/merge-stream": "^1.1.2",
     "@types/styled-components": "^5.1.19",
     "babel-jest": "^29.3.1",
@@ -63,6 +64,8 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-tap": "^2.0.0",
     "jest": "^29.3.1",
+    "jest-axe": "^7.0.0",
+    "jest-environment-jsdom": "^29.3.1",
     "jsdom": "^20.0.3",
     "merge-stream": "^2.0.0",
     "react": "^18.2.0",
