--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   },
   "lint-staged": {
     "packages/elvis/**/*.+(md|css|sass|less|graphql|yml|yaml|scss|json|vue)": [
-      "yarn prettier:elvis"
+      "yarn prettier:elvis",
+      "npx stylelint 'packages/elvis/src/*/*.scss'"
     ],
     "packages/web/**/*.+(js|ts|tsx)": [
       "yarn prettier:web",
@@ -80,6 +81,11 @@
     "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "rxjs": "^6.5.3",
     "safe-json-stringify": "^1.2.0",
+    "stylelint": "^14.16.0",
+    "stylelint-config-prettier-scss": "^0.0.1",
+    "stylelint-config-sass-guidelines": "^9.0.1",
+    "stylelint-config-standard-scss": "^6.1.0",
+    "stylelint-selector-bem-pattern": "^2.1.1",
     "typescript": "~4.8.2",
     "zone.js": "~0.11.8"
   },
