--- a/packages/components/components/elvis-datepicker-range/package.json
+++ b/packages/components/components/elvis-datepicker-range/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@elvia/elvis-component-wrapper": "^4.0.0",
     "@elvia/elvis-datepicker": "^6.0.15",
+    "@elvia/elvis-timepicker": "^2.2.1",
     "@elvia/elvis-toolbox": "^7.4.3",
     "styled-components": "^5.3.3"
   },
