--- a/packages/components/components/elvis-tabs/package.json
+++ b/packages/components/components/elvis-tabs/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@elvia/elvis-assets-icons": "^2.6.1",
     "@elvia/elvis-colors": "^1.4.2",
+    "@elvia/elvis-typography": "^2.3.1",
     "@elvia/elvis-component-wrapper": "^4.0.0",
     "@elvia/elvis-toolbox": "^7.4.1",
     "lodash.throttle": "^4.1.1",
