--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,10 +1,19 @@
 {
-  "extends": ["stylelint-config-sass-guidelines", "stylelint-config-prettier-scss"],
+  "extends": [
+    "stylelint-config-sass-guidelines",
+    "stylelint-config-idiomatic-order",
+    "stylelint-config-prettier-scss"
+  ],
   "plugins": ["stylelint-selector-bem-pattern"],
   "rules": {
     "indentation": 2,
-    "number-leading-zero": null,
+    "declaration-property-value-disallowed-list": null,
     "max-nesting-depth": null,
+    "number-leading-zero": null,
+    "order/properties-alphabetical-order": null,
+    "selector-class-pattern": null,
+    "selector-no-qualifying-type": null,
+    "selector-pseudo-element-colon-notation": ["double"],
     "plugin/selector-bem-pattern": {
       "preset": "bem",
       "componentName": "[A-Z]+",
