--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "rxjs": "^6.5.3",
     "safe-json-stringify": "^1.2.0",
     "stylelint": "^14.16.0",
+    "stylelint-config-idiomatic-order": "^9.0.0",
     "stylelint-config-prettier-scss": "^0.0.1",
     "stylelint-config-sass-guidelines": "^9.0.1",
     "stylelint-config-standard-scss": "^6.1.0",
