--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -15,6 +15,7 @@
     "test:coverage": "jest --coverage --colors"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.18.10",
     "@babel/plugin-transform-react-jsx": "^7.18.10",
     "@babel/plugin-transform-runtime": "^7.18.10",
     "@babel/preset-typescript": "^7.18.6",
