--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -11,6 +11,7 @@
     "scss/at-extend-no-missing-placeholder": null,
     "max-nesting-depth": null,
     "number-leading-zero": null,
+    "selector-max-compound-selectors": null,
     "order/properties-alphabetical-order": null,
     "selector-class-pattern": null,
     "selector-no-qualifying-type": null,
