--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint": "^8.17.0",
     "eslint-plugin-react": "^7.30.0",
     "express": "^4.17.1",
+    "gulp-stylelint": "^13.0.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.7",
     "nx": "15.0.4",
@@ -80,7 +81,7 @@
     "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "rxjs": "^6.5.3",
     "safe-json-stringify": "^1.2.0",
-    "stylelint": "^14.16.0",
+    "stylelint": "^14.16.1",
     "stylelint-config-idiomatic-order": "^9.0.0",
     "stylelint-config-prettier-scss": "^0.0.1",
     "stylelint-config-sass-guidelines": "^9.0.1",
