refactor(stylelintrc): disable dollar-variable-pattern

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -8,12 +8,13 @@
   "rules": {
     "indentation": 2,
     "declaration-property-value-disallowed-list": null,
-    "scss/at-extend-no-missing-placeholder": null,
+    "dollar-variable-pattern": null,
     "max-nesting-depth": null,
     "number-leading-zero": null,
-    "selector-max-compound-selectors": null,
     "order/properties-alphabetical-order": null,
+    "scss/at-extend-no-missing-placeholder": null,
     "selector-class-pattern": null,
+    "selector-max-compound-selectors": null,
     "selector-no-qualifying-type": null,
     "selector-pseudo-element-colon-notation": ["double"],
     "plugin/selector-bem-pattern": {
