--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -9,6 +9,7 @@
     "indentation": 2,
     "declaration-property-value-disallowed-list": null,
     "scss/at-extend-no-missing-placeholder": null,
+    "scss/at-mixin-pattern": null,
     "max-nesting-depth": null,
     "number-leading-zero": null,
     "selector-max-compound-selectors": null,
