--- a/packages/elvis/package.json
+++ b/packages/elvis/package.json
@@ -31,7 +31,7 @@
     "doiuse": "^4.4.0",
     "express": "^4.17.2",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "8.0.0",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.2.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^8.0.0",
