add homepage field to all package.json

--- a/packages/components/components/elvis-badge/package.json
+++ b/packages/components/components/elvis-badge/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.4",
   "description": "",
   "license": "MIT",
+  "homepage": "https://design.elvia.io/components/badge",
   "author": "",
   "main": "web_component.js",
   "files": [
