--- a/packages/components/components/elvis-outline/package.json
+++ b/packages/components/components/elvis-outline/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "license": "MIT",
+  "homepage": "https://design.elvia.io/components/outline",
   "author": "",
   "main": "web_component.js",
   "files": [
