--- a/packages/elvis/package.json
+++ b/packages/elvis/package.json
@@ -3,6 +3,7 @@
   "version": "10.1.0",
   "description": "Elvia design system",
   "license": "ISC",
+  "homepage": "https://design.elvia.io/",
   "author": "",
   "main": "",
   "scripts": {
