--- a/packages/components/components/elvis-accordion/package.json
+++ b/packages/components/components/elvis-accordion/package.json
@@ -5,6 +5,7 @@
   "main": "web_component.js",
   "author": "",
   "license": "MIT",
+  "homepage": "https://design.elvia.io/components/accordion",
   "files": [
     "web_component.js",
     "react.js",
