--- a/packages/components/components/elvis-breadcrumb/package.json
+++ b/packages/components/components/elvis-breadcrumb/package.json
@@ -3,6 +3,7 @@
   "version": "2.1.10",
   "description": "",
   "license": "MIT",
+  "homepage": "https://design.elvia.io/components/breadcrumb",
   "author": "",
   "main": "web_component.js",
   "files": [
