--- a/packages/components/components/elvis-card/package.json
+++ b/packages/components/components/elvis-card/package.json
@@ -3,6 +3,7 @@
   "version": "3.1.0",
   "description": "",
   "license": "MIT",
+  "homepage": "https://design.elvia.io/components/card",
   "author": "",
   "main": "web_component.js",
   "files": [
