--- a/packages/components/components/elvis-context-menu/package.json
+++ b/packages/components/components/elvis-context-menu/package.json
@@ -2,6 +2,7 @@
   "name": "@elvia/elvis-context-menu",
   "version": "1.1.1",
   "license": "MIT",
+  "homepage": "https://design.elvia.io/components/context-menu",
   "main": "web_component.js",
   "files": [
     "web_component.js",
