--- a/packages/components/components/elvis-dropdown/package.json
+++ b/packages/components/components/elvis-dropdown/package.json
@@ -3,6 +3,7 @@
   "version": "6.0.1",
   "main": "web_component.js",
   "license": "MIT",
+  "homepage": "https://design.elvia.io/components/dropdown",
   "files": [
     "web_component.js",
     "react.js",
