--- a/packages/components/components/elvis-header/package.json
+++ b/packages/components/components/elvis-header/package.json
@@ -2,6 +2,7 @@
   "name": "@elvia/elvis-header",
   "version": "1.2.1",
   "license": "MIT",
+  "homepage": "https://design.elvia.io/components/header",
   "main": "web_component.js",
   "files": [
     "web_component.js",
