--- a/packages/components/components/elvis-icon/package.json
+++ b/packages/components/components/elvis-icon/package.json
@@ -2,6 +2,7 @@
   "name": "@elvia/elvis-icon",
   "version": "1.3.8",
   "license": "MIT",
+  "homepage": "https://design.elvia.io/brand/icon#Implementation",
   "main": "web_component.js",
   "files": [
     "web_component.js",
