--- a/packages/components/components/elvis-radio-filter/package.json
+++ b/packages/components/components/elvis-radio-filter/package.json
@@ -2,6 +2,7 @@
   "name": "@elvia/elvis-radio-filter",
   "version": "1.5.6",
   "license": "MIT",
+  "homepage": "https://design.elvia.io/components/radio-filter",
   "main": "web_component.js",
   "files": [
     "web_component.js",
