--- a/packages/components/components/elvis-tooltip/package.json
+++ b/packages/components/components/elvis-tooltip/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.7",
   "description": "",
   "license": "MIT",
+  "homepage": "https://design.elvia.io/components/tooltip",
   "author": "",
   "main": "web_component.js",
   "files": [
