Lego 2244: Dokumentasjon - legg inn url i komponenters package json (#1267)
* make react peerdependencies optional on all components

* add homepage field to all package.json

--- a/packages/components/components/elvis-radio-filter/package.json
+++ b/packages/components/components/elvis-radio-filter/package.json
@@ -2,6 +2,7 @@
   "name": "@elvia/elvis-radio-filter",
   "version": "1.5.6",
   "license": "MIT",
+  "homepage": "https://design.elvia.io/components/radio-filter",
   "main": "web_component.js",
   "files": [
     "web_component.js",
@@ -21,5 +22,16 @@
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    },
+    "react-dom": {
+      "optional": true
+    },
+    "react-is": {
+      "optional": true
+    }
   }
 }
