--- a/packages/components/components/elvis-box/package.json
+++ b/packages/components/components/elvis-box/package.json
@@ -5,6 +5,7 @@
   "main": "web_component.js",
   "author": "",
   "license": "MIT",
+  "homepage": "https://design.elvia.io/components/box",
   "files": [
     "web_component.js",
     "react.js",
@@ -24,5 +25,16 @@
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    },
+    "react-dom": {
+      "optional": true
+    },
+    "react-is": {
+      "optional": true
+    }
   }
 }
