--- a/packages/components/components/elvis-datepicker-range/package.json
+++ b/packages/components/components/elvis-datepicker-range/package.json
@@ -3,6 +3,7 @@
   "version": "2.3.0",
   "main": "web_component.js",
   "license": "MIT",
+  "homepage": "https://design.elvia.io/components/datepicker-range",
   "files": [
     "web_component.js",
     "react.js",
@@ -22,5 +23,16 @@
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    },
+    "react-dom": {
+      "optional": true
+    },
+    "react-is": {
+      "optional": true
+    }
   }
 }
