--- a/packages/components/components/elvis-divider/package.json
+++ b/packages/components/components/elvis-divider/package.json
@@ -3,6 +3,7 @@
   "version": "1.4.4",
   "description": "",
   "license": "MIT",
+  "homepage": "https://design.elvia.io/components/divider",
   "author": "",
   "main": "web_component.js",
   "files": [
@@ -24,5 +25,16 @@
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    },
+    "react-dom": {
+      "optional": true
+    },
+    "react-is": {
+      "optional": true
+    }
   }
 }
