--- a/packages/components/components/elvis-icon/package.json
+++ b/packages/components/components/elvis-icon/package.json
@@ -2,6 +2,7 @@
   "name": "@elvia/elvis-icon",
   "version": "1.3.8",
   "license": "MIT",
+  "homepage": "https://design.elvia.io/brand/icon#Implementation",
   "main": "web_component.js",
   "files": [
     "web_component.js",
@@ -20,5 +21,16 @@
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    },
+    "react-dom": {
+      "optional": true
+    },
+    "react-is": {
+      "optional": true
+    }
   }
 }
