--- a/packages/components/components/elvis-tabs/package.json
+++ b/packages/components/components/elvis-tabs/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.1",
   "description": "",
   "license": "MIT",
+  "homepage": "https://design.elvia.io/components/tabs",
   "author": "",
   "main": "web_component.js",
   "types": "elvia-tabs.d.ts",
@@ -30,5 +31,16 @@
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-is": "^16.8.0 || ^17.0.0 || ^18.0.0"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    },
+    "react-dom": {
+      "optional": true
+    },
+    "react-is": {
+      "optional": true
+    }
   }
 }
